<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_co"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_co"
        app:layout_constraintVertical_bias="0.479">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info"
                style="@style/Base.Text"
                android:layout_marginStart="22dp"
                android:layout_marginTop="18dp"
                android:text="@string/sunday"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toStartOf="@id/btn_some"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_some"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/raunder_for_button"
                android:drawableEnd="@drawable/location"
                android:text="@string/mumbai"
                android:textColor="@color/blue_"
                app:backgroundTint="@color/lightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_clouds"
                style="@style/Base.Text"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/cloudy_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info" />

            <TextView
                android:id="@+id/Cloudy"
                style="@style/Base.Text.Small"
                android:layout_marginStart="34dp"
                android:text="@string/cloudy"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_clouds" />

            <TextView
                android:id="@+id/tv_number"
                style="@style/Base.Text"
                android:layout_marginTop="2dp"
                android:text="@string/degrees"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info" />

            <TextView
                android:id="@+id/tv_temp"
                style="@style/Base.Text.Large"
                android:layout_marginStart="2dp"
                android:layout_marginTop="60dp"
                android:text="@string/warm_cold"
                android:textColor="@color/grey"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_number"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_temp2"
                style="@style/Base.Text.Large"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/heat_degree"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_number"
                app:layout_constraintTop_toBottomOf="@+id/btn_some" />

            <TextView
                android:id="@+id/tv_temp3"
                style="@style/Base.Text.Large"
                android:layout_marginTop="16dp"
                android:text="@string/up_arrow"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/tv_temp2"
                app:layout_constraintTop_toBottomOf="@id/btn_some" />

            <TextView
                android:id="@+id/tv_temp4"
                style="@style/Base.Text.Large"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/degree_cold"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_number"
                app:layout_constraintTop_toBottomOf="@id/tv_temp2" />

            <TextView
                style="@style/Base.Text.Large"
                android:layout_marginTop="5dp"
                android:text="@string/stick_down"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/tv_temp4"
                app:layout_constraintTop_toBottomOf="@id/tv_temp3" />

            <ImageView
                android:id="@+id/iv_capli"
                style="@style/Image"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/kaplya"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Cloudy" />

            <TextView
                android:id="@+id/tv_number2"
                style="@style/Base.Text.Large"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:text="@string/seventy_three_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_capli" />

            <TextView
                android:id="@+id/tv_humi"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="32dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_number2" />

            <ImageView
                android:id="@+id/iv_speek"
                style="@style/Image"
                android:layout_marginTop="42dp"
                android:src="@drawable/speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_number" />

            <TextView
                android:id="@+id/tv_num"
                style="@style/Base.Text.Large"
                android:layout_marginTop="14dp"
                android:text="@string/mbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_speek" />

            <TextView
                android:id="@+id/tv_pres"
                style="@style/Base.Text.ShortText"
                android:text="@string/pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_num" />

            <ImageView
                android:id="@+id/iv_vozduh"
                style="@style/Image"
                android:layout_marginStart="100dp"
                android:layout_marginTop="34dp"
                android:src="@drawable/air"
                app:layout_constraintStart_toEndOf="@id/iv_speek"
                app:layout_constraintTop_toBottomOf="@id/tv_temp4" />

            <TextView
                android:id="@+id/tv_num2"
                style="@style/Base.Text.Large"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:text="@string/eleven_km_h"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_vozduh" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/Base.Text.ShortText"
                android:layout_marginEnd="50dp"
                android:text="@string/wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_num2" />

            <ImageView
                android:id="@+id/iv_suni"
                style="@style/Image"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/suni"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_humi" />

            <TextView
                android:id="@+id/tv_six"
                style="@style/Base.Text.Large"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/watch_6_03_am"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_suni" />

            <TextView
                android:id="@+id/tv_sunr"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="38dp"
                android:text="@string/sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_six" />

            <ImageView
                android:id="@+id/iv_cun"
                style="@style/Image"
                android:layout_marginTop="24dp"
                android:src="@drawable/cun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pres" />

            <TextView
                android:id="@+id/tv_pm"
                style="@style/Base.Text.Large"
                android:layout_marginStart="70dp"
                android:layout_marginTop="12dp"
                android:text="@string/watch_7_05_pm"
                app:layout_constraintStart_toEndOf="@+id/tv_six"
                app:layout_constraintTop_toBottomOf="@+id/iv_cun" />

            <TextView
                android:id="@+id/tv_sunset"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="100dp"
                android:text="@string/sunset"
                app:layout_constraintStart_toEndOf="@+id/tv_sunr"
                app:layout_constraintTop_toBottomOf="@+id/tv_pm" />

            <ImageView
                android:id="@+id/iv_watch"
                style="@style/Image"
                android:layout_marginTop="22sp"
                android:layout_marginEnd="44dp"
                android:src="@drawable/watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

            <TextView
                android:id="@+id/tv_chas"
                style="@style/Base.Text.Large"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="36dp"
                android:text="@string/daytime_13h_1m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_watch" />

            <TextView
                android:id="@+id/tv_day"
                style="@style/Base.Text.ShortText"
                android:layout_marginEnd="42dp"
                android:text="@string/daytime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_chas" />

            <ImageView
                android:id="@+id/iv_cum"
                style="@style/Image"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/cum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunr" />

            <TextView
                android:id="@+id/tv_mon"
                style="@style/Base.Text.Large"
                android:layout_marginStart="26dp"
                android:layout_marginTop="12dp"
                android:text="@string/mon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cum" />

            <TextView
                android:id="@+id/cocn"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/heat_degree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mon" />

            <TextView
                android:id="@+id/tv_top"
                style="@style/Base.Text.Small"
                android:layout_marginTop="4dp"
                android:text="@string/up_arrow"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/cocn"
                app:layout_constraintTop_toBottomOf="@+id/tv_mon" />

            <TextView
                android:id="@+id/tv_twentsix"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/degree_26_c"
                app:layout_constraintStart_toEndOf="@+id/tv_top"
                app:layout_constraintTop_toBottomOf="@+id/tv_mon" />

            <TextView
                android:id="@+id/tv_sit"
                style="@style/Base.Text.Small"
                android:layout_marginTop="4dp"
                android:text="@string/stick_down"
                app:layout_constraintStart_toEndOf="@+id/tv_twentsix"
                app:layout_constraintTop_toBottomOf="@+id/tv_mon" />

            <ImageView
                android:id="@+id/iv_oblaka"
                style="@style/Image"
                android:layout_marginTop="24dp"
                android:src="@drawable/oblaka"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunset" />

            <TextView
                android:id="@+id/tv_tue"
                style="@style/Base.Text.Large"
                android:layout_marginStart="74dp"
                android:layout_marginTop="14dp"
                android:text="@string/tue"
                app:layout_constraintStart_toEndOf="@+id/tv_mon"
                app:layout_constraintTop_toBottomOf="@+id/iv_oblaka" />

            <TextView
                android:id="@+id/tv_five"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="62dp"
                android:layout_marginTop="6dp"
                android:text="@string/heat_degree"
                app:layout_constraintStart_toEndOf="@+id/tv_sit"
                app:layout_constraintTop_toBottomOf="@+id/tv_tue" />

            <TextView
                android:id="@+id/tv_two"
                style="@style/Base.Text.Small"
                android:layout_marginTop="4dp"
                android:text="@string/up_arrow"
                app:layout_constraintStart_toEndOf="@+id/tv_five"
                app:layout_constraintTop_toBottomOf="@+id/tv_tue" />

            <TextView
                android:id="@+id/tv_seven"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/degree_cold"
                app:layout_constraintStart_toEndOf="@+id/tv_two"
                app:layout_constraintTop_toBottomOf="@+id/tv_tue" />

            <TextView
                android:id="@+id/tv_cit"
                style="@style/Base.Text.Small"
                android:layout_width="12dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:text="@string/stick_down"
                app:layout_constraintStart_toEndOf="@+id/tv_seven"
                app:layout_constraintTop_toBottomOf="@+id/tv_tue" />

            <ImageView
                android:id="@+id/iv_wave"
                style="@style/Image"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="44dp"
                android:src="@drawable/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_day" />

            <TextView
                android:id="@+id/tv_wed"
                style="@style/Base.Text.Large"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="36dp"
                android:text="@string/wed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_wave" />

            <TextView
                android:id="@+id/tv_four"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:text="@string/numder_34_c"
                app:layout_constraintStart_toEndOf="@+id/tv_cit"
                app:layout_constraintTop_toBottomOf="@+id/tv_wed" />

            <TextView
                android:id="@+id/tv_four2"
                style="@style/Base.Text.Small"
                android:layout_marginTop="4dp"
                android:text="@string/up_arrow"
                app:layout_constraintStart_toEndOf="@+id/tv_four"
                app:layout_constraintTop_toBottomOf="@+id/tv_wed" />

            <TextView
                android:id="@+id/tv_nine"
                style="@style/Base.Text.ShortText"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/number_29_c"
                app:layout_constraintStart_toEndOf="@+id/tv_four2"
                app:layout_constraintTop_toBottomOf="@+id/tv_wed" />

            <TextView
                android:id="@+id/tv_four3"
                style="@style/Base.Text.Small"
                android:layout_marginTop="4dp"
                android:text="@string/stick_down"
                app:layout_constraintStart_toEndOf="@+id/tv_nine"
                app:layout_constraintTop_toBottomOf="@+id/tv_wed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>